--- a/ansible/roles/as3/tasks/main.yml
+++ b/ansible/roles/as3/tasks/main.yml
@@ -1,56 +1,65 @@
 ---
-- name: Set connection provider for BIG-IP tasks
-  set_fact:
-    provider:
-      server: "{{ public_dns_name }}"
-      server_port: 8443
-      user: "{{ bigip.admin_user }}"
-      password: "{{ bigip.admin_password }}"
-      validate_certs: false 
+- name: Application Services 3 (AS3) Role
+  block:
 
-- name: Wait for BIG-IP to be ready to take configuration
-  bigip_wait:
-    timeout: 600
-    sleep: 5
-    provider: "{{ provider }}"
+    - name: Set connection provider for BIG-IP tasks
+      set_fact:
+        provider:
+          server: "{{ public_dns_name }}"
+          server_port: 8443
+          user: "{{ bigip.admin_user }}"
+          password: "{{ bigip.admin_password }}"
+          validate_certs: false 
 
-- name: Process AS3 jinja template and store result in output folder
-  template:
-    src: "templates/{{ webservers[item].as3_template }}.json.j2"
-    dest: "{{ outputfolder }}/as3_{{ item }}_{{ webservers[item].as3_template }}.json"
-    mode: 0644
-  with_items: "{{ webservers }}"   
+    - name: Wait for BIG-IP to be ready to take configuration
+      bigip_wait:
+        timeout: 600
+        sleep: 5
+        provider: "{{ provider }}"
+    
+    # Due to https://github.com/F5Networks/f5-appsvcs-extension/issues/253
+    - name: Merge all AS3 JSON blobs into one blob
+      set_fact:
+        as3_blob: "{{ as3_blob|default({}) | combine(lookup('template','templates/{{ webservers[item].as3_template }}.json.j2'), recursive=True) }}"
+      with_items: "{{ webservers }}"
 
-- name: Perform AS3 deployment
-  include_role:
-    name: f5devcentral.atc_deploy
-  vars:
-    atc_method: POST
-    atc_declaration_file: "{{ outputfolder }}/as3_{{ item }}_{{ webservers[item].as3_template }}.json"
-    atc_delay: 10
-    atc_retries: 20
-  with_items: "{{ webservers }}"
+    - name: Write the result of the merged AS3 JSON declaration in output folder
+      copy:
+        content: "{{ as3_blob | to_nice_json(indent=2) }}"
+        dest: "{{ outputfolder }}/as3_merged.json"
 
-- name: Verify AS3 deployment
-  include_role:
-    name: f5devcentral.atc_deploy
-  vars:
-    atc_method: GET
-    atc_delay: 10
-    atc_retries: 20
+    - name: Perform AS3 deployment
+      include_role:
+        name: f5devcentral.atc_deploy
+      vars:
+        atc_method: POST
+        atc_declaration_file: "{{ outputfolder }}/as3_merged.json"
+        atc_delay: 10
+        atc_retries: 20
+        atc_service: AS3
 
-- name: Store result of AS3 deployment in output folder
-  copy:
-    content: |
-      {{ (atc_GET_status.json is defined) | ternary(atc_GET_status.json | to_nice_json(indent=2), atc_GET_status.content) }}
-    dest: "{{ outputfolder }}/as3_total_result.json"
+    - name: Verify AS3 deployment
+      include_role:
+        name: f5devcentral.atc_deploy
+      vars:
+        atc_method: GET
+        atc_delay: 10
+        atc_retries: 20
+        atc_service: AS3
 
-- name: Final result verification on BIG-IP 
-  debug:
-    msg: >
-      Verify on BIG-IP if your desired results was achieved
-        > Admin UI : https://{{ public_dns_name }}:8443
-        > REST URI : https://{{ public_dns_name }}:8443/mgmt/shared/appsvcs/declare
-        > DOCS URL   : https://clouddocs.f5.com/products/extensions/f5-appsvcs-extension/latest
-        > SCHEMA REF : https://clouddocs.f5.com/products/extensions/f5-appsvcs-extension/latest/refguide/schema-reference.html
-        > GITHUB SRC : https://github.com/F5Networks/f5-appsvcs-extension
+    - name: Store result of AS3 deployment in output folder
+      copy:
+        content: |
+          {{ (atc_GET_status.json is defined) | ternary(atc_GET_status.json | to_nice_json(indent=2), atc_GET_status.content) }}
+        dest: "{{ outputfolder }}/as3_merged_result.json"
+
+  always:
+    - name: AS3 final result verification on BIG-IP 
+      debug:
+        msg: |
+          Verify on BIG-IP if your desired results was achieved
+            > Admin UI : https://{{ public_dns_name }}:8443
+            > REST URI : https://{{ public_dns_name }}:8443/mgmt/shared/appsvcs/declare
+            > DOCS URL   : https://clouddocs.f5.com/products/extensions/f5-appsvcs-extension/latest
+            > SCHEMA REF : https://clouddocs.f5.com/products/extensions/f5-appsvcs-extension/latest/refguide/schema-reference.html
+            > GITHUB SRC : https://github.com/F5Networks/f5-appsvcs-extension
