--- a/ansible/roles/do/tasks/main.yml
+++ b/ansible/roles/do/tasks/main.yml
@@ -1,46 +1,65 @@
 ---
-- name: Set connection provider for BIG-IP tasks
-  set_fact:
-    provider:
-      server: "{{ public_dns_name }}"
-      server_port: 8443
-      user: "{{ bigip.admin_user }}"
-      password: "{{ bigip.admin_password }}"
-      validate_certs: false
+- name: Declarative Onboarding (DO) Role
+  block:
 
-- name: Wait for BIG-IP to be ready to take configuration
-  bigip_wait:
-    timeout: 600
-    sleep: 10
-    provider: "{{ provider }}"
+    - name: Set connection provider for BIG-IP tasks
+      set_fact:
+        provider:
+          server: "{{ public_dns_name }}"
+          server_port: 8443
+          user: "{{ bigip.admin_user }}"
+          password: "{{ bigip.admin_password }}"
+          validate_certs: false
 
-- name: Process DO jinja template and store result in output folder
-  template:
-    src: "templates/onboard.json.j2"
-    dest: "{{ outputfolder }}/do_onboard.json"
-    mode: 0644
+    - name: Wait for BIG-IP to be ready to take configuration
+      bigip_wait:
+        timeout: 600
+        sleep: 10
+        provider: "{{ provider }}"
 
-- name: Perform DO for initial device onboarding
-  include_role:
-    name: f5devcentral.atc_deploy
-  vars:
-    atc_method: POST
-    atc_declaration_file: "{{ outputfolder }}/do_onboard.json"
-    atc_delay: 10
-    atc_retries: 90
+    - name: Process DO jinja template and store result in output folder
+      template:
+        src: "templates/onboard.json.j2"
+        dest: "{{ outputfolder }}/do_onboard.json"
+        mode: 0644
 
-- name: Store result of DO onboarding in output folder
-  copy:
-    content: |
-      {{ (atc_DO_result.json is defined) | ternary(atc_DO_result.json | to_nice_json(indent=2), atc_DO_result.content) }}
-    dest: "{{ outputfolder }}/do_onboard_result.json"
+    - name: Perform DO for initial device onboarding
+      include_role:
+        name: f5devcentral.atc_deploy
+      vars:
+        atc_method: POST
+        atc_declaration_file: "{{ outputfolder }}/do_onboard.json"
+        atc_delay: 10
+        atc_retries: 90
+        atc_service: Device
 
-- name: Final result verification of DO onboarding 
-  debug:
-    msg: >
-        Verify on BIG-IP if your desired results was achieved
-        > Admin UI   : https://{{ public_dns_name }}:8443
-        > REST URI   : https://{{ public_dns_name }}:8443/mgmt/shared/declarative-onboarding
-        > DOCS URL   : https://clouddocs.f5.com/products/extensions/f5-declarative-onboarding/latest
-        > SCHEMA REF : https://clouddocs.f5.com/products/extensions/f5-declarative-onboarding/latest/schema-reference.html
-        > GITHUB SRC : https://github.com/F5Networks/f5-declarative-onboarding
+    - name: Wait for DO initial onboarding to fully complete
+      uri:
+        url: "https://{{ provider.server }}:{{ provider.server_port }}/mgmt/shared/declarative-onboarding"
+        method: GET
+        user: "{{ provider.user }}"
+        password: "{{ provider.password }}"
+        return_content: true
+        validate_certs: "{{ provider.validate_certs }}"
+        status_code: 200
+      register: atc_GET_DO_status
+      until: atc_GET_DO_status.json.result.status == "OK"
+      retries: 90
+      delay: 10
+
+    - name: Store result of DO onboarding in output folder
+      copy:
+        content: |
+          {{ (atc_GET_DO_status.json is defined) | ternary(atc_GET_DO_status.json | to_nice_json(indent=2), atc_GET_DO_status.content) }}
+        dest: "{{ outputfolder }}/do_onboard_result.json"
+
+  always:
+    - name: DO final result verification of DO onboarding 
+      debug:
+        msg: |
+            Verify on BIG-IP if your desired results was achieved
+            > Admin UI   : https://{{ public_dns_name }}:8443
+            > REST URI   : https://{{ public_dns_name }}:8443/mgmt/shared/declarative-onboarding
+            > DOCS URL   : https://clouddocs.f5.com/products/extensions/f5-declarative-onboarding/latest
+            > SCHEMA REF : https://clouddocs.f5.com/products/extensions/f5-declarative-onboarding/latest/schema-reference.html
+            > GITHUB SRC : https://github.com/F5Networks/f5-declarative-onboarding
