--- a/setup.change.yml
+++ b/setup.change.yml
@@ -19,23 +19,33 @@ bigip:
   ec2_instance_type: m5.large
   ami_search_name: "F5 BIGIP-15.* PAYG-Best 200Mbps*"
   extra_private_ips: 2
-  do_version: v1.12.0
-  as3_version: v3.19.0
-  ts_version: v1.11.0
+  do_version: 1.12.0
+  as3_version: 3.19.0
+  ts_version: 1.11.0
+  cfe_version: 1.2.0
 
-## Nginx Webserver variables
+## Webserver variables
 webservers:
-  nginx:
-    count: 3
+  nginx_one:
+    count: 2
     vs_port: 8080
     tenant: Team_Nginx
-    application: NginxWebServer
-    autodiscovery_tag: nginx
+    application: NginxWebServerOne
+    autodiscovery_tag: nginx_one
     as3_template: http
     private_ip_index: 1
-    docker_command: docker run -d -p 80:80 --net host -e F5DEMO_APP=website -e F5DEMO_NODENAME=NginxWebserver --restart always --name f5demoapp f5devcentral/f5-demo-httpd:nginx
+    docker_command: docker run -d -p 80:80 --net host -e F5DEMO_APP=website -e F5DEMO_NODENAME=NginxWebServerOne -e F5DEMO_COLOR=ff5e13 --restart always --name f5demoapp f5devcentral/f5-demo-httpd:nginx
+  nginx_two:
+    count: 2
+    vs_port: 8081
+    tenant: Team_Nginx
+    application: NginxWebServerTwo
+    autodiscovery_tag: nginx_two
+    as3_template: waf
+    private_ip_index: 1
+    docker_command: docker run -d -p 80:80 --net host -e F5DEMO_APP=website -e F5DEMO_NODENAME=NginxWebServerTwo -e F5DEMO_COLOR=0072bb --restart always --name f5demoapp f5devcentral/f5-demo-httpd:nginx
   broken:
-    count: 3
+    count: 2
     vs_port: 8080
     tenant: Team_Broken
     application: BrokenWebServer
