add support to also run terraform and ansible directly in the corresponding folders without the makefile

--- a/ansible/bigip.yml
+++ b/ansible/bigip.yml
@@ -1,5 +1,5 @@
 ---
-- name: Declarative Onboarding (DO) playbook
+- name: BIG-IP Configuration Playbook
   hosts: tag_Role_bigip
   connection: local
   vars_files: "{{ (setupfile is defined) | ternary(setupfile, '../setup.yml') }}"
