--- a/ansible/grafana.yml
+++ b/ansible/grafana.yml
@@ -1,5 +1,5 @@
 ---
-- name: Declarative Onboarding (DO) playbook
+- name: Grafana Configuration Playbook
   hosts: tag_Role_bigip
   connection: local
   vars_files: "{{ (setupfile is defined) | ternary(setupfile, '../setup.yml') }}"
